...
            <objects>
                <viewController storyboardIdentifier="sign" id="BYZ-38-t0r" customClass="SignInViewController" customModule="Hotel" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgx-97-p9l">
                                <rect key="frame" x="16" y="162" width="136" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="136" id="8xR-or-jto"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
...
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PRN-sz-1zc">
                                <rect key="frame" x="160" y="157" width="199" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3Q-aV-hxd">
                                <rect key="frame" x="16" y="215" width="136" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="136" id="3tO-Iq-4KB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
...
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x15-SW-m88">
                                <rect key="frame" x="160" y="210" width="199" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T8w-Su-JuC">
                                <rect key="frame" x="16" y="270" width="136" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="136" id="Lwh-Ys-VM1"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
...
                                <color key="backgroundColor" red="0.7373647207326427" green="0.83756561203598068" blue="0.87198429404145084" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="56" id="TH6-Gn-vTa"/>
                                    <constraint firstAttribute="width" constant="162" id="o6j-PH-wMR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Sign">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="signInTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ICP-ok-dPY"/>
                                    <segue destination="rtK-Fz-Gok" kind="presentation" identifier="showhotels" modalPresentationStyle="fullScreen" id="CcK-0Z-TQh"/>
                                </connections>
                            </button>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="f6n-Ms-m5r">
                                <rect key="frame" x="120" y="86" width="135" height="32"/>
                                <color key="backgroundColor" red="0.73736472070000003" green="0.83756561200000001" blue="0.87198429399999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <segments>
                                    <segment title="Sign In"/>
                                    <segment title="Sign Up"/>
                                </segments>
                                <connections>
                                    <action selector="segmentTapped:" destination="BYZ-38-t0r" eventType="valueChanged" id="N5M-hl-X7h"/>
                                </connections>
                            </segmentedControl>
                        </subviews>
...
                            <constraint firstItem="ehw-3h-nZb" firstAttribute="trailing" secondItem="5uf-7g-LyY" secondAttribute="trailing" id="sdm-rk-Mx0"/>
                            <constraint firstItem="cA7-UH-ANe" firstAttribute="top" secondItem="5uf-7g-LyY" secondAttribute="top" constant="69" id="wce-Wa-kmv"/>
                            <constraint firstItem="WwY-1s-CT4" firstAttribute="leading" secondItem="cA7-UH-ANe" secondAttribute="trailing" constant="28" id="y3M-4B-D3N"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="5uf-7g-LyY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Hotels" id="IfE-4e-1Mz"/>
                    <connections>
                        <outlet property="findCityLabel" destination="cA7-UH-ANe" id="Ij5-G4-cXQ"/>
                        <outlet property="hotelsCollectionView" destination="ZFp-hd-MhK" id="71A-dF-hkn"/>
                        <outlet property="tabBar" destination="ehw-3h-nZb" id="yjd-lh-JJJ"/>
                    </connections>
                </viewController>
...
