...
// MARK: BaseViewController
// Базовый класс для использования делегатов, управления сценами и
// добавление элементов на панель навигации
class BaseViewController: UIViewController, ViewOutputDelegate {
    
    override func viewDidLoad() {
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: NSLocalizedString("Sign Out", comment: ""), style: .done, target: self, action: #selector(signOutTapped))
    }
    
    @objc func signOutTapped() {
        nextScene(name: "sign")
    }
    
...
